Issue #10 Cleanup process execution